# test

./: CMakeLists.txt  README.md  factory.cpp  git_notes.md  main.cpp
include/1_factory_header/: conproduct2.h
include/1_simple_factory_header/: factory.h
include/2_strategy_header/: ConcerteStrategyA.h  ConcerteStrategyC.h  Strategy.h
include/4_proxy_header/: GiveGift.h  Proxy.h  Pursuit.h  SchoolGirl.h
include/5_factory_header/: IFactory.h  LeiFeng.h  Undergraduate.h  UndergraduateFactory.h  Volunteer.h  VolunteerFactory.h
include/decorate_header/: Decorator.h  Person.h
include/factory_header/: conproduct1.h  product.h
include/strategy_header/: ConcerteStrategyB.h  Context.h
